Fix secondary navigation spacing when no icon is present

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -378,6 +378,10 @@ $secondary-item-font-size: rem(15px);
   }
 }
 
+.SecondaryNavigation-noIcon {
+  margin-left: spacing();
+}
+
 // Section styles
 .Section {
   @include unstyled-list;
